Update edit patient profile